--- a/实验报告.md
+++ b/实验报告.md
@@ -316,6 +316,51 @@ node('slave') {
 
 **2.5 代码提交到仓库自动触发流水线**
 
+使用了github 的git action来触发流水线
+
+1. **在 GitHub 仓库中设置 Secrets**：
+
+   在您的 GitHub 仓库页面上，点击 "Settings" > "Secrets" > "New repository secret"，然后添加名为 `STUDENT_ID` 和 `PASSWORD` 的两个 secret，分别学号和密码。
+
+2. **创建工作流程文件**：
+
+   在代码仓库中，创建一个 `.github/workflows` 目录，然后在该目录下创建一个 `.yml` 格式的工作流程文件，例如 `trigger-pipeline.yml`。
+
+```
+name: Trigger Jenkins Pipeline
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  trigger_pipeline:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up curl
+        run: sudo apt-get install -y curl
+
+      - name: Trigger Pipeline
+        env:
+          STUDENT_ID: ${{ secrets.STUDENT_ID }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+        run: |
+          curl "http://p.nju.edu.cn/portal_io/login?username=${STUDENT_ID}&password=${PASSWORD}"
+          curl -X POST http://172.29.4.36:8080/job/023-pipeline/build
+
+```
+
+ 当git 提交时候， 会触发git action， git action通过脚本触发Jenkins
+
+![image-20230814223030633](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814223030633.png)
+
+![image-20230814223042502](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814223042502.png)
+
 #### 3.扩容场景
 ##### 3.1Prometheus与Grafana的可视化监控
 编写`prometheus.yml`文件，通过该 Java 项目提供的/actuator/prometheus接口，以供 Prometheus 采集监控指标
@@ -332,6 +377,7 @@ node('slave') {
 ![](https://box.nju.edu.cn/f/d1437dde9d2848dda635/?dl=1)
 查看 Grafana 的端口，用户名和初始密码均为`admin`
 ![](https://box.nju.edu.cn/f/353fd7aad60a41a6a064/?dl=1)
+
 ##### 3.2Grafana 定制应用监控大屏
 首先设置数据源，进入 Grafana 后，在左侧 Data Source 即数据源选项，点 Add Data Source 即添加数据源，选择 Prometheus
 ![](https://box.nju.edu.cn/f/da50418b0f4c4a40a338/?dl=1)
@@ -357,3 +403,35 @@ node('slave') {
 在 Jmeter 中也出现了访问次数过多的返回429的情况
 ![](https://box.nju.edu.cn/f/dde5884866554d0fab7e/?dl=1)
 
+**3.5 Auto Scale（bonus）**
+
+使用 Kubernetes HPA 模块根据 CPU 负载做服务的 Auto Scale
+
+创建一个Horizontal Pod Autoscaler (HPA) 的配置文件，例如 `hpa.yaml`，示例如下：
+
+![image-20230814223531520](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814223531520.png)
+
+- `scaleTargetRef`中的 `name` 字段应该与Deployment的名称匹配。
+- `minReplicas` 指定了最小的Pod副本数。
+- `maxReplicas` 指定了最大的Pod副本数。
+- `metrics` 部分指定了用于自动扩缩容的指标，这里使用了CPU资源利用率作为指标。
+
+当应用开始运行后，HPA会定期检查CPU利用率，并根据配置的目标值进行扩缩容。如果CPU利用率超过了目标值，HPA会增加Pod副本数，以应对负载增加；反之，如果CPU利用率低于目标值，HPA会减少Pod副本数，以节约资源。
+
+下面是截图
+
+配置的截图
+
+![image-20230814223633620](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814223633620.png)
+
+查看hpa
+
+![image-20230814223647272](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814223647272.png)
+
+开始时候的pod数目![image-20230814223707155](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814223707155.png)
+
+使用ab去发送100次请求
+
+![image-20230814224020908](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814224020908.png)
+
+通过观察验证HPA是否根据CPU负载自动进行了扩缩容操作
