--- a/实验报告.md
+++ b/实验报告.md
@@ -96,6 +96,24 @@ DELIMITER ;
 
 ![image-20230814214601383](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814214601383.png)
 
+效果截图
+
+
+
+使用ab发送1000次请求![image-20230814225037243](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814225037243.png)
+
+观察每一个pods的日志， ![image-20230814225000893](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814225000893.png)
+
+观察到了 请求过多之后打印Too many requests，和token重置的现象， 并且由于所有的pod公用数据库，pods之间实现统一的限流![image-20230814225206890](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814225206890.png)
+
+下面是一次请求过程中3个pod的日志
+
+![image-20230814225539418](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814225539418.png)
+
+![image-20230814225609474](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814225609474.png)
+
+![image-20230814225631941](https://blog-1314638240.cos.ap-nanjing.myqcloud.com/image/image-20230814225631941.png)
+
 #### 2.DevOps功能
 
 ##### 2.1 Dockerfile 用于构建镜像
