--- a/实验报告.md
+++ b/实验报告.md
@@ -3,7 +3,7 @@
 |姓名|学号|邮箱|分工|
 |-|-|-|-|
 |赵政杰|211250109|3239168744@qq.com|文档书写，Prometheus+grafana配置监控及压力测试|
-|徐子豪|211250110|||
+|徐子豪|211250110|211250110@smail.nju.edu.cn|DevOps部分功能，单元测试|
 |谢其卓|211870187|1055069518@qq.com|Spring Boot 应用部分功能, DevOps部分功能|
 |本组为 nju23 组||||
 |本组使用 github 仓库进行协同开发，通过 QQ 合作交流||||
@@ -385,7 +385,7 @@ jobs:
 目标是本机ip的8080端口（项目运行在容器中时，通过8080端口映射）
 ![](https://box.nju.edu.cn/f/9f1c872c2b014ed7b7ba/?dl=1)
 编写 docker 配置文件`docker-compose.yml`，它用来在 docker 上安装和配置 Grafana
-其中 Grafana 使用3030端口，Prometheus 使用9090端口
+其中 Grafana 使用3000端口，Prometheus 使用9090端口
 ![](https://box.nju.edu.cn/f/d9fed3361b98412a9666/?dl=1)
 运行`docker-compose.yml`配置文件，可以看到 docker 中有两个正在运行的容器，分别为 Grafana 和 Prometheus，它们在同一网络下
 ![](https://box.nju.edu.cn/f/041dc413a3894f9c9daf/?dl=1)
