--- a/实验报告.md
+++ b/实验报告.md
@@ -393,6 +393,31 @@ jobs:
 ![](https://box.nju.edu.cn/f/82a8fbd25d654e31842c/?dl=1)
 查看 Prometheus 的端口，可以看到 target 中 spring-boot 的监测接口是 up 状态
 ![](https://box.nju.edu.cn/f/d1437dde9d2848dda635/?dl=1)
+以上的实现仅仅只是静态的配置，我们可以通过k8s的api-server完成服务的发现，这样就不需要每部署一个新任务就重新运行一次prometheus
+```yaml
+    relabel_configs:
+      - source_labels: [ __meta_kubernetes_namespace]
+        regex: order
+        action: keep
+      - source_labels: [ __metrics_path__]
+        action: replace
+        replacement: /hellgate/prometheus#这个是每个微服务暴露出数据收集的URI
+        target_label: __metrics_path__
+        regex: (.+)
+      - source_labels: [ __address__,__meta_kubernetes_pod_annotation_prometheus_io_port]
+        action: replace
+        regex: (.*);(.*)
+        replacement: ${ 1 }:${ 2 }
+        target_label: __address__
+      - action: labelmap
+        regex: __meta_kubernetes_pod_label_(.+)
+      - source_labels: [ __meta_kubernetes_namespace ]
+        action: replace
+        target_label: kubernetes_namespace
+      - source_labels: [ __meta_kubernetes_pod_name ]
+        action: replace
+        target_label: kubernetes_pod_name
+```
 查看 Grafana 的端口，用户名和初始密码均为`admin`
 ![](https://box.nju.edu.cn/f/353fd7aad60a41a6a064/?dl=1)
 
